feat: add multi-machine benchmark comparison system
Core Features:
- Machine selector dropdown to compare x86 vs ARM performance
- machines.json manifest with CPU specs and capabilities
- Per-machine benchmark data files with metadata
- Auto-detect BLAS backend availability per platform

Machine Data:
- Intel i7-1360P (x86, AVX2): MKL + OpenBLAS support
- NVIDIA DGX Spark (ARM, NEON): OpenBLAS only

UI Updates:
- Machine selector dropdown with platform info
- Auto-hide MKL option on ARM machines (not available)
- Demo mode loads appropriate data file per machine
- Updated generate_demo_data.py to support --machine parameter

Benchmark Data:
- benchmark_results_intel-i7-1360p.json: 24 configs, 2.32x avg speedup
- benchmark_results_nvidia-dgx-spark.json: 3 configs, ARM baseline data

Technical Changes:
- Updated demo-mode.js to load machine-specific data files
- Added CSS for machine selector dropdown
- Pin Mojo to 0.26.1 for ARM compatibility

--- a/ui/frontend/index.html
+++ b/ui/frontend/index.html
@@ -68,6 +68,15 @@
 
                 <div class="divider"></div>
 
+                <!-- Machine Selection -->
+                <div class="config-group">
+                    <label class="config-label">Machine</label>
+                    <select id="machineSelect" class="machine-select" onchange="selectMachine(this.value)">
+                        <option value="intel-i7-1360p">Intel i7-1360P (x86, AVX2)</option>
+                        <option value="nvidia-dgx-spark">NVIDIA DGX Spark (ARM, NEON)</option>
+                    </select>
+                </div>
+
                 <!-- BLAS Backend -->
                 <div class="config-group">
                     <label class="config-label">BLAS</label>
@@ -225,6 +234,32 @@
                 </section>
 
                 <section class="modal-section">
+                    <h3>💻 Benchmark Hardware</h3>
+                    <div class="hw-compact">
+                        <div class="hw-row">
+                            <span class="hw-icon">🖥️</span>
+                            <span class="hw-label">CPU</span>
+                            <span class="hw-value">Intel i7-1360P (12C/16T)</span>
+                        </div>
+                        <div class="hw-row">
+                            <span class="hw-icon">🎮</span>
+                            <span class="hw-label">GPU</span>
+                            <span class="hw-value">RTX 4060 Ti + Intel Iris Xe</span>
+                        </div>
+                        <div class="hw-row">
+                            <span class="hw-icon">🐧</span>
+                            <span class="hw-label">OS</span>
+                            <span class="hw-value">Fedora 43 (Kernel 6.18.4)</span>
+                        </div>
+                        <div class="hw-row">
+                            <span class="hw-icon">🔥</span>
+                            <span class="hw-label">Mojo</span>
+                            <span class="hw-value">0.26.2.0.dev2026020405</span>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="modal-section">
                     <h3>How It Works</h3>
                     <ul class="feature-list">
                         <li>
@@ -256,42 +291,6 @@
                             </div>
                         </li>
                     </ul>
-                </section>
-
-                <section class="modal-section">
-                    <h3>Benchmark Hardware</h3>
-                    <div class="hardware-grid">
-                        <div class="hw-category">
-                            <h4>CPU</h4>
-                            <p>13th Gen Intel Core i7-1360P</p>
-                            <span class="hw-detail">12 cores, 16 threads</span>
-                        </div>
-                        <div class="hw-category">
-                            <h4>GPU (Primary)</h4>
-                            <p>NVIDIA GeForce RTX 4060 Ti</p>
-                            <span class="hw-detail">Driver: 580.119.02</span>
-                        </div>
-                        <div class="hw-category">
-                            <h4>GPU (iGPU)</h4>
-                            <p>Intel Raptor Lake-P</p>
-                            <span class="hw-detail">Iris Xe Graphics</span>
-                        </div>
-                        <div class="hw-category">
-                            <h4>Operating System</h4>
-                            <p>Fedora Linux 43</p>
-                            <span class="hw-detail">Kernel 6.18.4-200.fc43.x86_64</span>
-                        </div>
-                        <div class="hw-category">
-                            <h4>Display Server</h4>
-                            <p>Hyprland 0.53.0</p>
-                            <span class="hw-detail">Wayland compositor</span>
-                        </div>
-                        <div class="hw-category">
-                            <h4>Mojo Version</h4>
-                            <p>0.26.2.0.dev2026020405</p>
-                            <span class="hw-detail">Max Nightly (Feb 4, 2026)</span>
-                        </div>
-                    </div>
                 </section>
 
                 <section class="modal-section modal-cta">
